node-app/healthy/deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: kubia-healthy
  namespace: default
  labels:
    app: kubia-healthy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubia-healthy
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 30%    
  template:
    metadata:
      labels:
        app: kubia-healthy
    spec:
      containers:
      - image: ualter/kubia:v1-healthy
        name: kubia-healthy
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 9191
        livenessProbe:
          httpGet:
            path: /
            port: 9191              
          initialDelaySeconds: 10
          periodSeconds: 10
        #imagePullPolicy: Always
        imagePullPolicy: IfNotPresent
