node-app/healthy/ingress-nginx-svc-kubia.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubia-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /kubia
        backend:
          serviceName: kubia-service
          servicePort: 80
